[gd_scene load_steps=3 format=3 uid="uid://dx07xfu4vqtjh"]

[ext_resource type="Script" path="res://JAMGAM/Options.gd" id="1_g7bir"]
[ext_resource type="VideoStream" path="res://Video/Arcade_Gamer.ogv" id="2_cyhea"]

[node name="Options" type="Control"]
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1317.0
offset_top = -229.0
offset_right = 1467.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3675, 1)
size_flags_vertical = 4
script = ExtResource("1_g7bir")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1658.0
offset_top = -305.0
offset_right = -412.0
offset_bottom = 670.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_cyhea")
autoplay = true
expand = true
loop = true

[node name="CenterContainer" type="CenterContainer" parent="VideoStreamPlayer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -247.667
offset_top = -66.5
offset_right = -137.667
offset_bottom = 245.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VideoStreamPlayer/CenterContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Video" type="Button" parent="VideoStreamPlayer/CenterContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath(".")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Graphics"

[node name="Audio" type="Button" parent="VideoStreamPlayer/CenterContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Audio"

[node name="Guide" type="Button" parent="VideoStreamPlayer/CenterContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Guide"

[node name="Back" type="Button" parent="VideoStreamPlayer/CenterContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 2
focus_neighbor_bottom = NodePath("../Video")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Back"

[connection signal="pressed" from="VideoStreamPlayer/CenterContainer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="VideoStreamPlayer/CenterContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VideoStreamPlayer/CenterContainer/VBoxContainer/Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="VideoStreamPlayer/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
